--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,14 @@
         "activityBar.background": "#3B2925",
         "titleBar.activeBackground": "#533A34",
         "titleBar.activeForeground": "#FBFAF9"
+    },
+    "files.associations": {
+        "*.json.liquid": "json",
+        "*.yaml.liquid": "yaml",
+        "*.md.liquid": "markdown",
+        "*.js.liquid": "liquid-javascript",
+        "*.css.liquid": "liquid-css",
+        "*.scss.liquid": "liquid-scss",
+        "iostream": "cpp"
     }
 }
